force-app/main/default/objects/skilljar__Access_Code__c/skilljar__Access_Code__c.object-meta.xml
<CustomObject>
    <label>Access Code</label>
    <nameField>
        <label>Access Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Access Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>