force-app/main/default/objects/skilljar__Access_Code__c/fields/skilljar__Access_Code_Pool__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Access_Code_Pool__c</fullName>
    <label>Access Code Pool</label>
    <referenceTo>skilljar__Access_Code_Pool__c</referenceTo>
    <relationshipLabel>Access Codes</relationshipLabel>
    <relationshipName>Access_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>