force-app/main/default/objects/skilljar__Access_Code__c/fields/skilljar__Max_Uses__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Max_Uses__c</fullName>
    <label>Max Uses</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>