force-app/main/default/objects/skilljar__Access_Code__c/fields/skilljar__Use_Count__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Use_Count__c</fullName>
    <label>Use Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>